[package]
name = "org-roam-nvim-ui"
version = "0.2.0"
edition = "2024"
default-run = "org-roam-nvim-ui"
description = "A basic GUI for org-roam.nvim"
readme = "README.md"
license = "ISC"

[[bin]]
path = "src/main.rs"
name = "org-roam-nvim-ui"

# [[bin]]
# path = "src/rpc_test.rs"
# name = "org-roam-nvim-ui-rpc-test"


[dependencies]
eframe = { version = "0.34.0", default-features = false, features = ["default_fonts", "x11", "wayland", "glow"] }
egui = "0.34.0"
itertools = "0.14.0"
nalgebra = { version = "0.34.2", features = ["rand"] }
rand = "0.9"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
